--- a/style.css
+++ b/style.css
@@ -94,6 +94,14 @@ header{
     background-position-y: -180px;
 }
 
+.banner-contacto {
+    background: url(img/contacto-banner.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-position-y: -180px;
+}
+
 .main-banner-cont {
     display: flex;
     justify-content: center;
@@ -475,6 +483,88 @@ footer ul, footer div {
     font-size: 20px;
 }
 
+
+.location-cont {
+    background-color: #3735358f;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+}
+
+.location-cont p {
+    color: var(--white);
+}
+
+.location-cont .location {
+    color: #f8f8f878;
+    margin-top: 10px;
+}
+
+.location-cont p, .location-cont .location {
+    margin-left: 20px;
+}
+
+.client-card {
+    background-color: var(--white);
+    box-shadow: 1px 1px 10px #3735353d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+    margin: 50px auto;
+    position: relative;
+    border-bottom-left-radius: 100px;
+    border-top-left-radius: 100px;
+}
+
+.client-profile {
+    height: 180px;
+    box-shadow: 1px 1px 5px var(--black);
+    border-radius: 50%;
+}
+
+.stars {
+    height: 20px;
+}
+
+.client-info {
+    margin-left: 20px;
+    padding: 20px;
+}
+
+.line-stars {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.line-stars hr {
+    flex: 1;
+    height: 1px;
+    border: none;
+    margin-right: 20px;
+    background-color: var(--black);
+}
+
+.client-comments {
+    font-size: 20px;
+    width: 90%;
+    margin-top: 15px;
+}
+
+.clients-valor{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 @media screen and (min-width:1201px) {
     #burguer-menu,#mobile-menu{
         display: none;
@@ -513,6 +603,52 @@ footer ul, footer div {
         width: 85%;
     }
 }
+@media screen and (max-width:1190px) {
+
+    .client-profile {
+
+        transform: translateY(-48px);
+    }
+
+    .client-card {
+
+        background-color: var(--white);
+        box-shadow: 1px 1px 10px #3735353d;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 60%;
+        margin: 50px auto;
+        position: relative;
+        border-bottom-left-radius:0; 
+        border-top-left-radius:0;
+        flex-direction: column;
+    }
+
+    .client-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .client-info {
+        transform: translateY(-30px);
+    }
+
+    .client-comments {
+        text-align: center;
+    }
+
+    .line-stars hr{
+        display: none;
+    }
+
+    .line-stars {
+        display: block;
+    }
+}
+
 @media screen and (max-width:750px) {
     .main-banner-cont a {
         font-size: 50px;
@@ -600,4 +736,16 @@ footer ul, footer div {
     .nav-logo {
         margin-left: 25px;
     }
+}
+
+@media screen and (max-width:600px) {
+    .client-card{ 
+        width: 85%;
+    }
+
+    .title-container h2 {
+        text-align: center;
+        font-size: 22px;
+    }
+    
 }
